bug 252717: assert only when count > 0. debug only.